# iai2

./: Cargo.toml
.github/workflows/: ci.yml
benches/: test_regular_bench.rs
macro/: Cargo.toml
macro/benches/: test_macro_bench.rs
macro/src/: lib.rs
src/: lib.rs  macros.rs  valgrind.rs
src/cachegrind/: mod.rs  parser.rs  runner.rs
src/valgrind/: mod.rs  parser.rs  runner.rs  stats.rs
